# cfa-zensical-template

./: .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml  zensical.toml
docs/: api.md  example.md  index.md  migrating_from_mkdocs.md
src/cfadoc/: __init__.py
src/cfadoc/templates/: api.md  index.md  zensical.toml
toy_package/: __init__.py
