[project]
name = "toy_package"
version = "0.2.0"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.10"
readme = "README.md"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
docs = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.34",
]
