[project]
name = "cfadoc"
version = "0.3.0"
description = ""
authors = [{ name = "Scott Olesen", email = "ulp7@cdc.gov" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyyaml>=6.0.3",
    "questionary>=2.1.1",
    "rich>=15.0.0",
]

[dependency-groups]
docs = [
    "mdx-truly-sane-lists>=1.3",
    "mkdocstrings-python>=2.0.3",
    "zensical>=0.0.34",
]

[project.scripts]
cfadoc = "cfadoc:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
